# chat_api

./: .gitignore  README.md  pyproject.toml  requirements.txt
requirements/: dev.txt  requirements-fastapi.txt  websockets.txt
src/chat_api/: __init__.py  asyncio.py  enums.py  exceptions.py  models.py  parsing.py  state.py  streaming.py  transport.py
src/chat_api/clients/: __init__.py  base.py  client.py  server.py  shared.py
src/chat_api/interface/: __init__.py  base.py  client.py  server.py
src/chat_api/interface/handles/: __init__.py  base.py  client.py  server.py
src/chat_api/states/: __init__.py  base.py  client.py  server.py
src/chat_api/transports/: __init__.py  base.py  in_memory.py  scheduling.py  starlette.py  websockets.py
tests/: test_basic.py  test_dummy_client.py  test_dummy_server.py  test_flow.py  test_handles.py  test_transports.py
