[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat_api"
version = "0.1.0"
description = "Stateful client library for Chat API protocol (client<->server)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "development" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"chat_api" = ["py.typed"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

# [project.urls]
# Homepage = "https://example.com/chat_api"
# Repository = "https://example.com/chat_api/repo"
