[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat_api"
version = "0.1.0"
description = "Stateful client library for Chat API protocol (client<->server)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["pydantic", "typing-extensions"]

[project.optional-dependencies]
websockets = ["websockets"]
fastapi = ["fastapi"]
test = ["uvicorn"]

[tool.hatch.build.targets.wheel]
packages = ["src/chat_api"]
